--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,14 +3,15 @@
 
 <head>
 	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="theme-color" content="#000000" />
+	<meta name="description" content="Open Illustration Library" />
 	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="/main.bundle.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="theme-color" content="#000000" />
-	<meta name="description" content="Web site created using create-react-app" />
 	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-	<title>React App</title>
+	<title>Open IL</title>
 </head>
 
 <body>
